ch(refactor): refactor code with recommendations from PR - write tests -use nested resources - update routes - add reason to user table - use RESTful actions

--- a/app/assets/stylesheets/styles/admin.scss
+++ b/app/assets/stylesheets/styles/admin.scss
@@ -5,29 +5,28 @@
   margin: auto;
 }
 
-.view_btn {
+.view-btn {
    margin-left: 40em;
 }
-.trade_chips {
-  margin-top: 5em
+
+.trade-chips {
+  margin-top: 5em;
 }
 
-.submission_date{
+.submission-date {
   margin-left: 40em;
   margin-bottom: auto;
 }
 
-.btn_flat{
+.btn-flat {
   color: #EB4D5C;
 }
-.trade{
+
+.trade {
   display: inline;
 }
-.noScroll {
-  overflow: hidden;
-  position: fixed;
-}
+
 .answers {
   border-bottom: 1px solid;
-  margin: 20px
+  margin: 20px;
 }
