--- a/app/views/admin/applicants/edit.html.erb
+++ b/app/views/admin/applicants/edit.html.erb
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="modal-content col s12">
             <h4><%= @applicant.fullname%></h4>
-            <ul class="li_item">
+            <ul class="li-item">
                 <% @applicant.skillsets.each do |skillset| %>
                 <li class="trade">
                     <%= skillset.name %>&nbsp
@@ -24,28 +24,20 @@
                 </li>
                 <% end %>
             </ul>
+            <%= form_for @applicant, url: admin_applicant_path, method: :put do |f| %>
+            <div class="field">
+                <%= f.radio_button :status, "accepted", id: "1", checked: true%>
+                <%= f.label :status_accepted, "Accept" %>
+                <%= f.radio_button :status,  "rejected", id: "2" %>
+                <%= f.label :status_rejected, "Reject" %>
+            </div>
 
-            <form action="<%= update_applicant_path %>" method="post">
-                <p>
-                    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-                    <input name="user_id" type="text" id="test3" value="<%= @applicant.id %>" hidden/>
-                </p>
-                <p>
-                    <input name="review_appl" type="radio" id="accept" value="1" checked="checked"/>
-                    <label for="accept">Accept</label>
-                </p>
-                <p>
-                    <input name="review_appl" type="radio" id="reject" value="2"/>
-                    <label for="reject">Reject</label>
-                </p>
-
-                <div class="input-field">
-                    <textarea id="reasons" class="materialize-textarea" minlength="5"></textarea>
-                    <label for="reasons">Reasons</label>
-                </div>
-
-                <button type="submit" class="btn view_btn">Submit</button>
-            </form>
+            <div class="field">
+              <%= f.text_area :reason, class: 'form-control materialize-textarea', required: true%>
+              <%= f.label :reason, "Reasons" %>
+            </div>
+            <%= f.submit "Update ", class: "btn view-btn" %>
+            <% end %>
         </div>
     </div>
   </div>
