ft(views): Add styling for sign out link

--- a/app/views/users/responses/show.html.erb
+++ b/app/views/users/responses/show.html.erb
@@ -24,7 +24,7 @@
       </div>
     <% end %>
 
-    <%= link_to "Sign Out", signout_path, method: :delete %>
+    <%= link_to "Sign Out", signout_path, method: :delete, class: "brand-logo" %>
   </div>
 </div>
 
