--- a/app/views/ratings/new.html.erb
+++ b/app/views/ratings/new.html.erb
@@ -1,53 +1,73 @@
 <section class="main container center">
-  <h1>
-    <% user = User.find(@user_id) %>
-    <%= user.firstname%> <%=user.lastname %>
-  </h1>
-  <h2>Vetting Results</h2>
-  <hr>
-  <p>confidence: <%= @vetting_record.confidence %></p>
-  <div id="confidence-rating" class="stars"> </div>
-  <p>experience: <%= @vetting_record.experience %></p>
-  <div id="experience-rating" class ="stars"> </div>
-  <h4>skill proficiency: <%= @vetting_record.skill_proficiency %> </h4>
-  <div id="proficiency"></div>
-  <%= form_for @rating, url: ratings_path do |f| %>
-    <%= f.label :comment %>
+    <h3>
+        <% user = User.find(@user_id) %>
+        <%= user.firstname%>
+        <%=user.lastname %>
+    </h3>
+    <h4>Vetting Results</h4>
+    <hr>
+    <table class="responsive-table" style="width: 60%;" align="center">
+        <tbody>
+            <tr>
+                <td>
+                    <h5 style="position: relative; float: left">confidence:</h5>
+                </td>
+                <td>
+                    <div id="confidence-rating" class="stars" style="position: relative; float: right"></div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h5 style="position: relative; float: left">experience:</h5>
+                </td>
+                <td>
+                    <div id="experience-rating" class="stars" style="position: relative; float: right"></div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h5 style="position: relative; float: left">skill proficiency:</h5>
+                </td>
+                <td>
+                    <div id="proficiency" style="position: relative; float: right"></div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
+    <%= form_for @rating, url: ratings_path do |f| %>
+    <br>
+    <%= f.label :comment, {:style=> "font-size: 120%"} %>
     <%= f.text_field :comment, required: true%>
-    <%= f.label :rating %>
-    <div id="rating"></div>
+    <%= f.label :rating, {:style=> "font-size: 120%"} %>
+    <br>
+    <br>
+    <div id="rating" style="margin:auto;"></div>
+
     <%= f.hidden_field :rating, id:'rating_value' %>
     <%= hidden_field_tag 'user_id', @user_id %>
-    <%= f.submit "Submit" %>
-  <% end %>
+    <br>
+    <br>
+    <%= f.submit "Submit", :class => "btn btn-large" %>
+    <% end %>
 </section>
 
 <script>
-$(function () {
-  var star_ids = ["#confidence-rating", "#experience-rating", "#proficiency"];
-  var ratings = [
-    <%= @vetting_record.confidence %>,
-    <%= @vetting_record.experience %>,
-    <%= @vetting_record.skill_proficiency %>
-  ];
-  for (var i in star_ids) {
-    $(star_ids[i]).rateYo({
-      rating: ratings[i],
-      readOnly: true
+    $(function () {
+        var star_ids = ["#confidence-rating", "#experience-rating", "#proficiency"];
+        var ratings = [<%= @vetting_record.confidence %>, <%= @vetting_record.experience %>, <%= @vetting_record.skill_proficiency %>];
+        for (var i in star_ids) {
+            $(star_ids[i]).rateYo({rating: ratings[i], readOnly: true});
+        }
     });
-  }
-});
 
-$(function () {
-  $("#rating").rateYo({
-    fullStar: true
-  });
-});
+    $(function () {
+        $("#rating").rateYo({fullStar: true, starWidth: "50px"});
+    });
 
-$(function () {
-  $("#rating").rateYo()
-              .on("rateyo.set", function (e, data) {
-                  document.getElementById('rating_value').value = data.rating
-              });
-});
+    $(function () {
+        $("#rating").rateYo().on("rateyo.set", function (e, data) {
+            document.getElementById('rating_value').value = data.rating
+        });
+    });
 </script>
