--- a/app/views/users/responses/new.html.erb
+++ b/app/views/users/responses/new.html.erb
@@ -8,14 +8,30 @@
 
   <%= form_tag users_responses_path, class: "col s8 offset-s2",
     method: "post", id: "response_form", class: "col s12" do %>
+
+    <% if flash["errors"] %>
+      <div id="error_explanation">
+        <h2><%= pluralize(flash["errors"]["response"].count, "error") %></h2>
+        <ul>
+          <%flash["errors"]["response"].each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
     <% @questions.each do |question| %>
       <p>
         <% asterix = if question.required? then " *" else "" end %>
-        <h5 class="row"><%= question.question + asterix %></h5>
+        <h5 class="row"><%= question.question %>
+          <font color="red">
+            <%= asterix %>
+          </font>
+        </h5>
 
         <% if question.options.empty? %>
           <% if question.required? %>
-            <%= text_area_tag "response[#{question.question}]", nil, class: "materialize-textarea", :required => true %>
+            <%= text_area_tag "response[#{question.question}]", nil, class: "materialize-textarea" %>
           <% else %>
             <%= text_area_tag "response[#{question.question}]", nil, class: "materialize-textarea" %>
           <% end %>
