--- a/app/views/partials/_sidebar_dashboard.html.erb
+++ b/app/views/partials/_sidebar_dashboard.html.erb
@@ -1,9 +1,9 @@
 <ul id="slide-out" class="side-nav sinav fixed">
-    <% path_to_home = '/admin/home' if current_user.admin? else dashboard_path %>
+    <% path_to_home = dashboard_path %>
     <%= link_to raw("<li class='side-nav-button'>Home</li>"), path_to_home %>
     <% if current_user.admin? %>
-      <%= link_to raw("<li class='side-nav-button'>Vet Artisans</li>"), '/admin/home' %>
-      <%= link_to raw("<li class='side-nav-button'>Certify Artisans</li>"), "/admin/certify_artisans"%>
+      <%= link_to raw("<li class='side-nav-button'>Vet Artisans</li>"), path_to_home %>
+      <%= link_to raw("<li class='side-nav-button'>Certify Artisans</li>"), admin_certify_artisans_path%>
     <% else %>
       <%= link_to raw("<li class='side-nav-button'>Edit Profile</li>"), profile_path %>
       <%= link_to raw("<li class='side-nav-button'>Biddings</li>"), biddings_path %>
