--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -15,6 +15,7 @@
           </li>
       </ul>
     </div>
+    <%= render "partials/enquiry" %>
 
     <div class="col s6 footer-links">
       <h5>Links</h5>
