ft(controllers): create EnquiriesController - write the create, edit, update and show actions - relate enquiry to notification in the create and update actions - put the slider in the header rather than the footer - create views for the enquiries - create factories for the enquiries

--- a/app/views/partials/_enquiry.html.erb
+++ b/app/views/partials/_enquiry.html.erb
@@ -8,16 +8,20 @@
 
   <div id="contact-form">
     <h3>Enquiry</h3>
+     <%= f.hidden_field :user_id, value: current_user.id %>
      <%= f.fields_for :user do |user| %>
     <div class="input-field">
-      <%= user.text_field :firstname, placeholder: "name" %>
+      <%= user.text_field :firstname %>
+      <%= user.label :firstname %>
     </div>
     <div class="input-field">
-      <%= user.email_field :email, placeholder: "email" %>
+      <%= user.email_field :email %>
+      <%= user.label :email %>
     </div>
     <% end %>
     <div class="field">
-      <%= f.text_area :question, class: 'form-control materialize-textarea', placeholder: "message", required: true%>
+      <%= f.text_area :question, class: 'form-control materialize-textarea',
+      placeholder: "message", required: true%>
     </div>
     <%= f.submit "Send", class: 'btn' %>
   </div>
