--- a/app/assets/stylesheets/styles/_dashboard.scss
+++ b/app/assets/stylesheets/styles/_dashboard.scss
@@ -164,7 +164,9 @@ nav .nav-wrapper {
   height: em(325px);
   overflow: hidden;
 }
-
+.shade{
+  background-color: #ddd;
+}
 .feed {
   border-bottom: 1px solid #ccc;
   padding: 5px;
