--- a/app/views/partials/_sidebar_dashboard.html.erb
+++ b/app/views/partials/_sidebar_dashboard.html.erb
@@ -1,21 +1,58 @@
 <ul id="slide-out" class="side-nav sinav fixed">
 <% if current_user.admin? %>
-<%= link_to raw("<li class='side-nav-button'>Home</li>"), dashboard_path %>
-<%= link_to raw("<li class='side-nav-button'>View Applications</li>"), admin_applicants_path %>
-<%= link_to raw("<li class='side-nav-button'>Vet Artisans</li>"), dashboard_path %>
-<%= link_to raw("<li class='side-nav-button'>Certify Artisans</li>"), certify_artisans_admin_ratings_path%>
+<li class='side-nav-button  <%= set_active_class(dashboard_path) %>'>
+  <%= link_to "Home", dashboard_path %>
+</li>
+<li class='side-nav-button  <%= set_active_class(admin_applicants_path) %>'>
+  <%= link_to "View Applications", admin_applicants_path  %>
+</li>
+
+<li class='side-nav-button  <%= set_active_class(certify_artisans_admin_ratings_path) %>'>
+  <%= link_to "Certify Artisans", certify_artisans_admin_ratings_path %>
+</li>
+
+
 <% else %>
-<%= link_to raw("<li class='side-nav-button'>Home</li>"), dashboard_path %>
-<%= link_to raw("<li class='side-nav-button'>Edit Profile</li>"), profile_path %>
-<%= link_to raw("<li class='side-nav-button'>Biddings</li>"), biddings_path %>
+<li class="side-nav-button <%= set_active_class(dashboard_path) %>">
+  <%= link_to "Home", dashboard_path %>
+</li>
+
+<li class="side-nav-button <%= set_active_class(profile_path) %>">
+  <%= link_to "Edit Profile", profile_path %>
+</li>
+<li class="side-nav-button <%= set_active_class(biddings_path) %>">
+  <%= link_to "Biddings", biddings_path %>
+</li>
+
 <% if current_user.artisan? %>
-<%= link_to raw("<li class='side-nav-button'>My Skillset</li>"), my_skillsets_path %>
-<%= link_to raw("<li class='side-nav-button'>My References</li>"), dashboard_references_path %>
+
+<li class="side-nav-button <%= set_active_class( my_skillsets_path) %>">
+  <%= link_to "My Skillset", my_skillsets_path %>
+</li>
+
+<li class="side-nav-button <%= set_active_class( dashboard_references_path ) %>">
+  <%= link_to "My References", dashboard_references_path %>
+</li>
+
 <% else %>
-<%= link_to raw("<li class='side-nav-button'>Map Search</li>"), map_search_path %>
-<%= link_to raw("<li class='side-nav-button'>Artisan Skillsets</li>"), artisans_path %>
+
+<li class="side-nav-button <%= set_active_class( map_search_path ) %>">
+  <%= link_to "Map Search", map_search_path %>
+</li>
+
+<li class="side-nav-button <%= set_active_class( artisans_path ) %>">
+  <%= link_to "Artisan Skillsets", artisans_path %>
+</li>
+
 <% end %>
-<%= link_to raw("<li class='side-nav-button'>Task logs</li>"), my_tasks_path %>
-<%= link_to raw("<li class='side-nav-button'>Account Upgrade</li>"), user_plans_path %>
+
+<li class="side-nav-button <%= set_active_class( my_tasks_path ) %>">
+  <%= link_to "Task logs", my_tasks_path %>
+</li>
+
+<li class="side-nav-button <%= set_active_class( user_plans_path) %>">
+  <%= link_to "Account Upgrades", user_plans_path %>
+</li>
+
 <% end %>
 </ul>
