ft(notifications): add js for enquiry notification - add ajax that gets and updates an enquiry notification - design modal for enquiry and response - update enquiry model to have notifications association

--- a/app/views/partials/_enquiry.html.erb
+++ b/app/views/partials/_enquiry.html.erb
@@ -11,12 +11,10 @@
      <%= f.hidden_field :user_id, value: current_user.id %>
      <%= f.fields_for :user do |user| %>
     <div class="input-field">
-      <%= user.text_field :firstname %>
-      <%= user.label :firstname %>
+      <%= user.text_field :firstname, placeholder: 'firstname' %>
     </div>
     <div class="input-field">
-      <%= user.email_field :email %>
-      <%= user.label :email %>
+      <%= user.email_field :email, placeholder: 'email' %>
     </div>
     <% end %>
     <div class="field">
