--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import "styles/tasks_managements";
 @import "styles/user_plans";
 @import "styles/search";
+@import "styles/services";
 @import "styles/tasks";
 @import "styles/profile_meter";
 @import "styles/biddings";
